basic layour done

--- a/signup.html
+++ b/signup.html
@@ -14,8 +14,14 @@
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
-
+    <div class="main-box">
+        <div class="left-box">
+            <h1>hello</h1>
+        </div>
+        <div class="right-box">
+            <h1>hello</h1>
+        </div>
+    </div>
 
     <!-- Bootstrap jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
