leftside basic layout done

--- a/signup.html
+++ b/signup.html
@@ -14,11 +14,17 @@
 </head>
 
 <body>
-    <div class="main-box">
-        <div class="left-box">
-            <h1>hello</h1>
+    <div class="main-container">
+        <div class="tansim-left-container">
+            <div class="tansim-left-header">
+                <h6>TANSIM</h6>
+                <h5>Tamil Nadu Startup And Innovation Mission</h5>
+            </div>
+            <div class="tansim-left-footer">
+                <p>Already Have an Account? <a href="#">Login</a></p>
+            </div>
         </div>
-        <div class="right-box">
+        <div class="tansim-right-container">
             <h1>hello</h1>
         </div>
     </div>
