signup page done

--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- icons 8 -->
+    <a href="https://icons8.com/icon/13903/close-window"></a>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         crossorigin="anonymous">
@@ -14,17 +16,26 @@
 </head>
 
 <body>
+    <!--tansim main container-->
     <div class="main-container">
+        <!--tansim left container-->
         <div class="tansim-left-container">
+            <!--tansim  left header -->
             <div class="tansim-left-header">
                 <h6>TANSIM</h6>
                 <h5>Tamil Nadu Startup And Innovation Mission</h5>
             </div>
+            <!--tansim  left footer -->
             <div class="tansim-left-footer">
                 <p>Already Have an Account? <a href="#">Login</a></p>
             </div>
         </div>
+        <!--tansim right container-->
         <div class="tansim-right-container">
+            <div class="close-btn">
+                <p><img src="https://img.icons8.com/ios/25/000000/close-window.png" /> close</p>
+            </div>
+            <!-- tansim form -->
             <div class="tansim-right-form">
                 <h4>Sign up For An Account Today.</h4>
                 <form>
@@ -41,8 +52,8 @@
                         <input type="password" class="form-control" placeholder="Confirm Password">
                     </div>
                     <button type="submit" class="btn btn-primary btn-block">CREATE YOUR ACCOUNT</button>
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                        else.</small>
+                    <small class="form-text text-muted mt-3">By Signing up, you agree to the <strong>Privacy
+                            Policy, Terms and Conditions.</strong></small>
                 </form>
             </div>
         </div>
