--- a/signup.html
+++ b/signup.html
@@ -27,7 +27,7 @@
             </div>
             <!--tansim  left footer -->
             <div class="tansim-left-footer">
-                <p>Already Have an Account? <a href="#">Login</a></p>
+                <p>Already Have an Account? <a href="login.html">Login</a></p>
             </div>
         </div>
         <!--tansim right container-->
@@ -37,7 +37,7 @@
             </div>
             <!-- tansim form -->
             <div class="tansim-right-form">
-                <h4>Sign up For An Account Today.</h4>
+                <h4 class="mb-5">Sign up For An Account Today.</h4>
                 <form>
                     <div class="form-group">
                         <input type="email" class="form-control" placeholder="Email Address">
