--- a/signup.html
+++ b/signup.html
@@ -37,7 +37,7 @@
             </div>
             <!-- tansim form -->
             <div class="tansim-right-form">
-                <h4 class="mb-5">Sign up For An Account Today.</h4>
+                <h4 class="mb-5">Sign up for an account today.</h4>
                 <form>
                     <div class="form-group">
                         <input type="email" class="form-control" placeholder="Email Address">
